--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "salib>=1.5.2",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
     "torch>=2.9.0",
