--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "salib>=1.5.2",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
+    "seaborn>=0.13.2",
     "setuptools>=80.9.0",
     "torch>=2.9.0",
     "torchdiffeq>=0.2.5",
